--- a/publican/po/ja.po
+++ b/publican/po/ja.po
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ja\n"
 "Plural-Forms: nplurals=1; plural=0\n"
-"X-Generator: Zanata 2.0.3\n"
+"X-Generator: Zanata 2.2.2\n"
 
 #: lib/Publican/TreeView.pm:200
 msgid ""
@@ -56,7 +56,8 @@ msgstr "%1 はサイト設定ファイル内の必須のフィールドです"
 
 #. ('db_file',$site_config)
 #: lib/Publican/WebSite.pm:158
-msgid "%1 is a mandatory field in a site configuration file. Check %2 for validity."
+msgid ""
+"%1 is a mandatory field in a site configuration file. Check %2 for validity."
 msgstr "%1 はサイト設定ファイル内の必須のフィールドです。%2 をチェックして妥当性を確認します。"
 
 #. ('cmd')
@@ -95,7 +96,9 @@ msgstr "'%1'  は不明な操作です"
 
 #. ($language)
 #: lib/Publican/Builder.pm:2418
-msgid "'%1' is not a valid language for highlighting. Language names are case sensitive."
+msgid ""
+"'%1' is not a valid language for highlighting. Language names are case "
+"sensitive."
 msgstr "'%1' は、強調表示用には有効な言語ではありません。言語名は大文字/小文字の区別があります。"
 
 #: lib/Publican/Builder.pm:2502 lib/Publican/Builder.pm:2517
@@ -150,15 +153,24 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:102
-msgid "<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to view the Navigation options without JavaScript enabled</p>"
-msgstr "<p>上記のナビゲーションメニューが正しく機能するには JavaScript が必要になります。</p> <p>JavaScript を有効にするとナビゲーションメニューが機能するようになります。</p> <p>JavaScript を有効にすることなくナビゲーションオプションを表示するには、CSS を無効にしてください。</p>"
+msgid ""
+"<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable "
+"JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to "
+"view the Navigation options without JavaScript enabled</p>"
+msgstr ""
+"<p>上記のナビゲーションメニューが正しく機能するには JavaScript が必要になります。</p> <p>JavaScript "
+"を有効にするとナビゲーションメニューが機能するようになります。</p> <p>JavaScript "
+"を有効にすることなくナビゲーションオプションを表示するには、CSS を無効にしてください。</p>"
 
 #: lib/Publican.pm:95
-msgid "A comma-separated list of XML attributes that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML attributes that are not permitted in the "
+"source."
 msgstr ""
 
 #: lib/Publican.pm:101
-msgid "A comma-separated list of XML tags that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML tags that are not permitted in the source."
 msgstr ""
 
 #: lib/Publican.pm:385
@@ -166,7 +178,11 @@ msgid "A comma-separated list of the formats to use for the web packages."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:258
-msgid "A short overview and summary of the book's subject and purpose, traditionally no more than one paragraph long. Note: the abstract will appear in the front matter of your book and will also be placed in the description field of the book's RPM spec file."
+msgid ""
+"A short overview and summary of the book's subject and purpose, "
+"traditionally no more than one paragraph long. Note: the abstract will "
+"appear in the front matter of your book and will also be placed in the "
+"description field of the book's RPM spec file."
 msgstr ""
 
 #: lib/Publican.pm:90
@@ -194,7 +210,9 @@ msgid "Add an entry to the revision history"
 msgstr ""
 
 #: bin/publican:282
-msgid "Add or remove database entries. Used for processing pre-build books, such as when building packages."
+msgid ""
+"Add or remove database entries. Used for processing pre-build books, such as"
+" when building packages."
 msgstr ""
 
 #. ($lang)
@@ -386,7 +404,9 @@ msgid "Code"
 msgstr "コード"
 
 #: bin/publican:108
-msgid "Comma-separated list of formats, for example: html,pdf,html-single,html-desktop,txt,epub"
+msgid ""
+"Comma-separated list of formats, for example: html,pdf,html-single,html-"
+"desktop,txt,epub"
 msgstr ""
 
 #: bin/publican:111
@@ -599,20 +619,22 @@ msgstr ""
 msgid "Document Home"
 msgstr ""
 
-# translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:127
-#, fuzzy
 msgid "Document Language"
-msgstr "言語数の合計"
+msgstr ""
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:633
-msgid "ERROR: Banned attribute (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned attribute (%1) detected. Discuss this with your brands owners "
+"if you think this is in error."
 msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:622
-msgid "ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you"
+" think this is in error."
 msgstr ""
 
 #: lib/Publican.pm:1231
@@ -670,7 +692,9 @@ msgid "Enter your surname here."
 msgstr ""
 
 #: lib/Publican.pm:457
-msgid "Extra options to pass to wkhtmltopdf. e.g. wkhtmltopdf_opts: \"-O landscape -s A3\""
+msgid ""
+"Extra options to pass to wkhtmltopdf. e.g. wkhtmltopdf_opts: \"-O landscape "
+"-s A3\""
 msgstr ""
 
 #. ($@)
@@ -692,7 +716,9 @@ msgstr ""
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:358
-msgid "FATAL ERROR: profiling would prune root node. Do NOT set attributes to prune on in a root node. Offending attibute: %1"
+msgid ""
+"FATAL ERROR: profiling would prune root node. Do NOT set attributes to prune"
+" on in a root node. Offending attibute: %1"
 msgstr ""
 
 #: lib/Publican/Builder.pm:1566
@@ -745,7 +771,8 @@ msgstr ""
 
 #. ($pot_file,$po_file)
 #: lib/Publican/Translate.pm:354
-msgid "Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
+msgid ""
+"Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
 msgstr ""
 
 #. ($book,$?)
@@ -786,7 +813,9 @@ msgid "For HTML, should the first section be on the same page as its parent?"
 msgstr ""
 
 #: lib/Publican.pm:134
-msgid "For HTML, what is the deepest level of nesting at which a section should be split onto its own page?"
+msgid ""
+"For HTML, what is the deepest level of nesting at which a section should be "
+"split onto its own page?"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:124
@@ -794,7 +823,9 @@ msgid "Formats"
 msgstr ""
 
 #: lib/Publican.pm:441
-msgid "Full path for the publican site configuration file for non standard RPM websites."
+msgid ""
+"Full path for the publican site configuration file for non standard RPM "
+"websites."
 msgstr ""
 
 #: lib/Publican/Translate.pm:1155
@@ -936,7 +967,9 @@ msgid "Missing mandatory field '%1' in revision."
 msgstr ""
 
 #: lib/Publican.pm:1695
-msgid "NOTE: These lists of tags and attributes are brand specific and are not part of Publican itself."
+msgid ""
+"NOTE: These lists of tags and attributes are brand specific and are not part"
+" of Publican itself."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:232
@@ -944,11 +977,15 @@ msgid "NOTE: the href does not contain a language! This is CORRECT!"
 msgstr ""
 
 #: lib/Publican.pm:451
-msgid "Name of site package for non standard RPM websites. Required to ensure the site is installed."
+msgid ""
+"Name of site package for non standard RPM websites. Required to ensure the "
+"site is installed."
 msgstr ""
 
 #: lib/Publican.pm:179
-msgid "Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if not set in cfg file."
+msgid ""
+"Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if "
+"not set in cfg file."
 msgstr ""
 
 #: lib/Publican/TreeView.pm:274
@@ -995,7 +1032,8 @@ msgid "Override path to Common_Content directory"
 msgstr ""
 
 #: lib/Publican.pm:426
-msgid "Override the book name, bottom level, menu label on a Publican website."
+msgid ""
+"Override the book name, bottom level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:476
@@ -1015,7 +1053,9 @@ msgid "Override the default TOC path."
 msgstr ""
 
 #: lib/Publican.pm:419
-msgid "Override the default search form for a Publican website. By default this will use Google search and do a site search if web_host is set."
+msgid ""
+"Override the default search form for a Publican website. By default this "
+"will use Google search and do a site search if web_host is set."
 msgstr ""
 
 #: lib/Publican.pm:331
@@ -1031,11 +1071,15 @@ msgid "Override the product, top level, menu label on a Publican website."
 msgstr ""
 
 #: bin/publican:160
-msgid "Override the tool to use when creating PDFs. Valid options are wkhtmltopdf and fop."
+msgid ""
+"Override the tool to use when creating PDFs. Valid options are wkhtmltopdf "
+"and fop."
 msgstr ""
 
 #: lib/Publican.pm:436
-msgid "Override the version, middle level, menu label on a Publican website. To hide this menu item set this to: UNUSED"
+msgid ""
+"Override the version, middle level, menu label on a Publican website. To "
+"hide this menu item set this to: UNUSED"
 msgstr ""
 
 #. ($po_file)
@@ -1125,7 +1169,9 @@ msgid "Product List"
 msgstr ""
 
 #: lib/Publican.pm:287
-msgid "Product this package covers. Fetched from productname tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Product this package covers. Fetched from productname tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican.pm:1332
@@ -1142,7 +1188,9 @@ msgid "Push SRPM to brew"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2152
-msgid "Reached the maximum page ordering weight(30) that drupal can support. The rest of the pages will be ordered in alphabetical order\n"
+msgid ""
+"Reached the maximum page ordering weight(30) that drupal can support. The "
+"rest of the pages will be ordered in alphabetical order\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:992
@@ -1197,7 +1245,8 @@ msgid "Run: '%1 <action> --help' for details on action usage"
 msgstr ""
 
 #: bin/publican:856
-msgid "Running clean process to ensure stale content is not bundled in packages."
+msgid ""
+"Running clean process to ensure stale content is not bundled in packages."
 msgstr ""
 
 #: lib/Publican/Builder.pm:3576
@@ -1222,7 +1271,9 @@ msgid "Setting up %1"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2993
-msgid "Short-sighted packages can only be used to make desktop rpms. Add --desktop to your argument list."
+msgid ""
+"Short-sighted packages can only be used to make desktop rpms. Add --desktop "
+"to your argument list."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:123
@@ -1247,7 +1298,9 @@ msgid "Space-separated list of packages the desktop package requires."
 msgstr ""
 
 #: lib/Publican.pm:398
-msgid "Splash pages should be generated to be compatible with this web style. Valid values are 1 and 2."
+msgid ""
+"Splash pages should be generated to be compatible with this web style. Valid"
+" values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1286,15 +1339,20 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:99
-msgid "The Navigation Menu below will automatically collapse when pages are loaded. Enable cookies to fix the Navigation Menu functionality."
-msgstr "以下のナビゲーションメニューはページが読み込まれると自動的に折り畳まれます。ナビゲーションメニューの機能を固定するにはクッキーを有効にしてください。"
+msgid ""
+"The Navigation Menu below will automatically collapse when pages are loaded."
+" Enable cookies to fix the Navigation Menu functionality."
+msgstr ""
+"以下のナビゲーションメニューはページが読み込まれると自動的に折り畳まれます。ナビゲーションメニューの機能を固定するにはクッキーを有効にしてください。"
 
 #: lib/Publican.pm:284
 msgid "The OS for which to build packages."
 msgstr ""
 
 #: lib/Publican.pm:470
-msgid "The author name to be shown in drupal book page. It must be a valid drupal username."
+msgid ""
+"The author name to be shown in drupal book page. It must be a valid drupal "
+"username."
 msgstr ""
 
 #: lib/Publican.pm:106
@@ -1318,7 +1376,9 @@ msgid "The brew dist to use for building the web rpm."
 msgstr ""
 
 #: lib/Publican.pm:487
-msgid "The directory where the image should be stored in drupal server. The default is \"sites/default/files/\""
+msgid ""
+"The directory where the image should be stored in drupal server. The default"
+" is \"sites/default/files/\""
 msgstr ""
 
 #: bin/publican:116
@@ -1330,7 +1390,8 @@ msgid "The language the XML will be written in"
 msgstr ""
 
 #: lib/Publican.pm:481
-msgid "The menu where we can find the book. The default value is menu-user-guide"
+msgid ""
+"The menu where we can find the book. The default value is menu-user-guide"
 msgstr ""
 
 #: bin/publican:114
@@ -1338,7 +1399,9 @@ msgid "The name of the book, article, set, or brand"
 msgstr ""
 
 #: lib/Publican.pm:266
-msgid "The name of the main xml and ent files for this book, sans file extension and language. Fetched from docname if not set."
+msgid ""
+"The name of the main xml and ent files for this book, sans file extension "
+"and language. Fetched from docname if not set."
 msgstr ""
 
 #: bin/publican:117
@@ -1358,19 +1421,29 @@ msgid "The version of the product"
 msgstr ""
 
 #: bin/publican:127
-msgid "This flag tells publican the data being processed is a distributed set. Note: do not use distributed_set on the command line. Publican uses this flag when calling itself to process distributed sets. This is the only safe way this flag can be used."
+msgid ""
+"This flag tells publican the data being processed is a distributed set. "
+"Note: do not use distributed_set on the command line. Publican uses this "
+"flag when calling itself to process distributed sets. This is the only safe "
+"way this flag can be used."
 msgstr ""
 
 #: lib/Publican.pm:391
-msgid "This is a home page for a Publican-generated website, not a standard book."
+msgid ""
+"This is a home page for a Publican-generated website, not a standard book."
 msgstr ""
 
 #: lib/Publican.pm:410
-msgid "This is a host name for a Publican-generated website, used for searches and the Sitemap. Be sure to include the full path to your document tree. E.g. if your documents are in the docs directory: http://www.example.com/docs"
+msgid ""
+"This is a host name for a Publican-generated website, used for searches and "
+"the Sitemap. Be sure to include the full path to your document tree. E.g. if"
+" your documents are in the docs directory: http://www.example.com/docs"
 msgstr ""
 
 #: lib/Publican.pm:405
-msgid "This is a special page for a Publican-generated website, not a standard book. Valid types are home, product, and version."
+msgid ""
+"This is a special page for a Publican-generated website, not a standard "
+"book. Valid types are home, product, and version."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:346
@@ -1391,11 +1464,14 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:105
-msgid "This is an iframe, to view it upgrade your browser or enable iframe display."
+msgid ""
+"This is an iframe, to view it upgrade your browser or enable iframe display."
 msgstr "これは iframe です。 表示させるにはブラウザをアップグレードするか iframe 表示を有効にします。"
 
 #: lib/Publican/WebSite.pm:116
-msgid "This web site requires JavaScript and cookies to be enabled to function correctly."
+msgid ""
+"This web site requires JavaScript and cookies to be enabled to function "
+"correctly."
 msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
@@ -1414,7 +1490,8 @@ msgid "Total for %1"
 msgstr ""
 
 #: bin/publican:178
-msgid "Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
+msgid ""
+"Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
 msgstr ""
 
 #. ($!,$@)
@@ -1436,15 +1513,20 @@ msgid "Translator"
 msgstr "翻訳者"
 
 #: lib/Publican.pm:354
-msgid "Type of content this package contains. Supported: set, book, article, brand"
+msgid ""
+"Type of content this package contains. Supported: set, book, article, brand"
 msgstr ""
 
 #: lib/Publican.pm:303
-msgid "Type of repository in which books that form part of a remote set are stored. Supported types: SVN."
+msgid ""
+"Type of repository in which books that form part of a remote set are stored."
+" Supported types: SVN."
 msgstr ""
 
 #: lib/Publican.pm:186
-msgid "URL for the documentation team for this package. Used for top right URL on HTML."
+msgid ""
+"URL for the documentation team for this package. Used for top right URL on "
+"HTML."
 msgstr ""
 
 #: lib/Publican.pm:294
@@ -1514,7 +1596,9 @@ msgid "Version of the DocBook DTD on which this project is based."
 msgstr ""
 
 #: lib/Publican.pm:375
-msgid "Version of this package. Fetched from productnumber tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Version of this package. Fetched from productnumber tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
@@ -1542,7 +1626,9 @@ msgid "WARNING: Image missing: %1"
 msgstr ""
 
 #: lib/Publican/Translate.pm:903
-msgid "WARNING: Message missing from PO file, consider updating your POT and PO files."
+msgid ""
+"WARNING: Message missing from PO file, consider updating your POT and PO "
+"files."
 msgstr ""
 
 #. ($pot_file)
@@ -1565,11 +1651,15 @@ msgid "WARNING: Unknow config key %1, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3224
-msgid "WARNING: You can not create RPM packages with a blank abstract. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3234
-msgid "WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #. ($key)
@@ -1578,7 +1668,9 @@ msgid "WARNING: config key %1 is not valid for this type of object, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:897
-msgid "WARNING: table validation failed. Could not determine table for tgroup, column numbers cannot be validated"
+msgid ""
+"WARNING: table validation failed. Could not determine table for tgroup, "
+"column numbers cannot be validated"
 msgstr ""
 
 #: bin/publican:103
@@ -1817,9 +1909,8 @@ msgid "productnumber not found in Info file"
 msgstr ""
 
 #: lib/Publican/Builder.pm:178
-#, fuzzy
 msgid "pub_dir is a mandatory argument"
-msgstr "'path' は、必須の引数です"
+msgstr ""
 
 #. (scalar@ARGV,join( ' & ', @ARGV ))
 #: bin/publican:363
